--- a/Playground_Aug/Playground_Aug_ohe.ipynb
+++ b/Playground_Aug/Playground_Aug_ohe.ipynb
@@ -4091,11 +4091,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Opt A. Drop missing values\n",
-    "# data = data.dropna()\n",
+    "# Opt A. Drop missing values\n",
+    "data = data.dropna()\n",
     "\n",
-    "# Opt B. Replace missing values with 0\n",
-    "data = data.fillna(0)\n",
+    "# # Opt B. Replace missing values with 0\n",
+    "# data = data.fillna(0)\n",
     "\n",
     "# # Opt C. Replace missing values with the feature's mean\n",
     "# data = data.fillna(data.mean())"
@@ -4110,10 +4110,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    20921\n",
-      "1     5649\n",
+      "0    9627\n",
+      "1    2556\n",
       "Name: failure, dtype: int64\n",
-      "(26570, 33)\n"
+      "(12183, 33)\n"
      ]
     }
    ],
@@ -4186,8 +4186,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0.15242+0j), (0.13283+0j), (0.07738+0j), (0.06543+0j), (0.02022+0j), (0.02474+0j), (0.03582+0j), (0.02691+0j), (0.02801+0j), (0.03251+0j), (0.03221+0j), (0.02987+0j), (0.03198+0j), (0.03175+0j), (0.03163+0j), (0.03145+0j), (0.03024+0j), (0.03036+0j), (0.0305+0j), (0.0312+0j)]\n",
-      "Total contribution of 20 components: (90.746+0j) %\n",
+      "[(0.15411+0j), (0.13321+0j), (0.08169+0j), (0.06826+0j), (0.05783+0j), (0.00484+0j), (0.0199+0j), (0.03746+0j), (0.02289+0j), (0.02412+0j), (0.02473+0j), (0.03443+0j), (0.02779+0j), (0.02853+0j), (0.02866+0j), (0.03302+0j), (0.03247+0j), (0.03178+0j), (0.03147+0j), (0.0312+0j)]\n",
+      "Total contribution of 20 components: (90.839+0j) %\n",
       "\n"
      ]
     }
@@ -4240,7 +4240,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(26570, 20)\n"
+      "(12183, 20)\n"
      ]
     },
     {
@@ -4289,118 +4289,118 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-2.349394</td>\n",
-       "      <td>-1.964698</td>\n",
-       "      <td>-1.303966</td>\n",
-       "      <td>-0.987680</td>\n",
-       "      <td>-0.554604</td>\n",
-       "      <td>-1.617399</td>\n",
-       "      <td>-0.738669</td>\n",
-       "      <td>2.124230</td>\n",
-       "      <td>0.315575</td>\n",
-       "      <td>0.183741</td>\n",
-       "      <td>-0.802564</td>\n",
-       "      <td>-0.083918</td>\n",
-       "      <td>-0.914289</td>\n",
-       "      <td>-0.685622</td>\n",
-       "      <td>-0.023878</td>\n",
-       "      <td>1.248657</td>\n",
-       "      <td>-0.863789</td>\n",
-       "      <td>0.264279</td>\n",
-       "      <td>1.926349</td>\n",
-       "      <td>-0.270734</td>\n",
+       "      <td>-2.769029</td>\n",
+       "      <td>-2.518959</td>\n",
+       "      <td>-1.739020</td>\n",
+       "      <td>-0.330233</td>\n",
+       "      <td>0.237763</td>\n",
+       "      <td>-1.013230</td>\n",
+       "      <td>-0.089534</td>\n",
+       "      <td>-0.388454</td>\n",
+       "      <td>-1.157052</td>\n",
+       "      <td>0.350126</td>\n",
+       "      <td>-0.336157</td>\n",
+       "      <td>0.815053</td>\n",
+       "      <td>-0.006685</td>\n",
+       "      <td>-1.424460</td>\n",
+       "      <td>-0.503386</td>\n",
+       "      <td>-1.083073</td>\n",
+       "      <td>-1.334109</td>\n",
+       "      <td>-0.147658</td>\n",
+       "      <td>0.591205</td>\n",
+       "      <td>0.542109</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-2.714640</td>\n",
-       "      <td>-2.531594</td>\n",
-       "      <td>-1.822463</td>\n",
-       "      <td>-0.914283</td>\n",
-       "      <td>-0.625165</td>\n",
-       "      <td>-0.045687</td>\n",
-       "      <td>-0.223977</td>\n",
-       "      <td>0.159129</td>\n",
-       "      <td>0.714605</td>\n",
-       "      <td>-0.559149</td>\n",
-       "      <td>0.223976</td>\n",
-       "      <td>-0.232830</td>\n",
-       "      <td>-0.120726</td>\n",
-       "      <td>-0.993069</td>\n",
-       "      <td>0.021892</td>\n",
-       "      <td>0.026256</td>\n",
-       "      <td>-0.050733</td>\n",
-       "      <td>-0.533418</td>\n",
-       "      <td>-0.073019</td>\n",
-       "      <td>-0.655557</td>\n",
+       "      <td>-2.533044</td>\n",
+       "      <td>-2.459387</td>\n",
+       "      <td>-1.402981</td>\n",
+       "      <td>-0.189078</td>\n",
+       "      <td>1.777424</td>\n",
+       "      <td>-0.484972</td>\n",
+       "      <td>0.424470</td>\n",
+       "      <td>-1.452067</td>\n",
+       "      <td>0.814003</td>\n",
+       "      <td>0.627453</td>\n",
+       "      <td>0.365911</td>\n",
+       "      <td>0.267878</td>\n",
+       "      <td>0.417426</td>\n",
+       "      <td>-1.475091</td>\n",
+       "      <td>-0.786401</td>\n",
+       "      <td>-0.516684</td>\n",
+       "      <td>-0.684176</td>\n",
+       "      <td>0.382051</td>\n",
+       "      <td>0.220170</td>\n",
+       "      <td>-0.008383</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-2.558816</td>\n",
-       "      <td>-2.615596</td>\n",
-       "      <td>-1.880682</td>\n",
-       "      <td>-0.896443</td>\n",
-       "      <td>-0.347520</td>\n",
-       "      <td>0.372640</td>\n",
-       "      <td>-1.888250</td>\n",
-       "      <td>1.019234</td>\n",
-       "      <td>1.692147</td>\n",
-       "      <td>-1.248787</td>\n",
-       "      <td>1.024169</td>\n",
-       "      <td>-1.782918</td>\n",
-       "      <td>1.249223</td>\n",
-       "      <td>-0.185768</td>\n",
-       "      <td>-0.708649</td>\n",
-       "      <td>0.244224</td>\n",
-       "      <td>1.824514</td>\n",
-       "      <td>0.891206</td>\n",
-       "      <td>-0.277401</td>\n",
-       "      <td>0.132153</td>\n",
+       "      <td>-2.437271</td>\n",
+       "      <td>-2.245965</td>\n",
+       "      <td>-2.082603</td>\n",
+       "      <td>-1.039240</td>\n",
+       "      <td>-1.494441</td>\n",
+       "      <td>1.196309</td>\n",
+       "      <td>0.052683</td>\n",
+       "      <td>1.143150</td>\n",
+       "      <td>-1.010374</td>\n",
+       "      <td>0.957794</td>\n",
+       "      <td>-0.079618</td>\n",
+       "      <td>0.256957</td>\n",
+       "      <td>0.577960</td>\n",
+       "      <td>2.396974</td>\n",
+       "      <td>-0.354165</td>\n",
+       "      <td>-1.458098</td>\n",
+       "      <td>-0.357285</td>\n",
+       "      <td>2.010671</td>\n",
+       "      <td>0.207631</td>\n",
+       "      <td>-0.204656</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-2.559979</td>\n",
-       "      <td>-2.504797</td>\n",
-       "      <td>-1.847890</td>\n",
-       "      <td>-0.882382</td>\n",
-       "      <td>-1.210079</td>\n",
-       "      <td>0.159983</td>\n",
-       "      <td>0.285513</td>\n",
-       "      <td>0.088075</td>\n",
-       "      <td>0.139307</td>\n",
-       "      <td>-0.324613</td>\n",
-       "      <td>0.032903</td>\n",
-       "      <td>-0.891223</td>\n",
-       "      <td>0.306960</td>\n",
-       "      <td>-0.759363</td>\n",
-       "      <td>0.167718</td>\n",
-       "      <td>-0.142139</td>\n",
-       "      <td>-0.160595</td>\n",
-       "      <td>-0.551755</td>\n",
-       "      <td>-0.169424</td>\n",
-       "      <td>0.215321</td>\n",
+       "      <td>-2.047033</td>\n",
+       "      <td>-1.835530</td>\n",
+       "      <td>-1.363936</td>\n",
+       "      <td>-0.727224</td>\n",
+       "      <td>-0.476695</td>\n",
+       "      <td>0.414835</td>\n",
+       "      <td>0.073855</td>\n",
+       "      <td>1.426553</td>\n",
+       "      <td>0.031166</td>\n",
+       "      <td>0.434781</td>\n",
+       "      <td>2.238489</td>\n",
+       "      <td>-0.594066</td>\n",
+       "      <td>1.047646</td>\n",
+       "      <td>1.453106</td>\n",
+       "      <td>0.789411</td>\n",
+       "      <td>0.661492</td>\n",
+       "      <td>-0.106658</td>\n",
+       "      <td>0.854784</td>\n",
+       "      <td>0.301788</td>\n",
+       "      <td>-1.737809</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-2.358885</td>\n",
-       "      <td>-2.338624</td>\n",
-       "      <td>-1.815631</td>\n",
-       "      <td>-0.968781</td>\n",
-       "      <td>0.017734</td>\n",
-       "      <td>-0.417007</td>\n",
-       "      <td>-0.483347</td>\n",
-       "      <td>-0.210421</td>\n",
-       "      <td>-1.184965</td>\n",
-       "      <td>0.206227</td>\n",
-       "      <td>0.028060</td>\n",
-       "      <td>0.346867</td>\n",
-       "      <td>-0.629823</td>\n",
-       "      <td>0.289710</td>\n",
-       "      <td>-1.046042</td>\n",
-       "      <td>-0.246809</td>\n",
-       "      <td>-0.659602</td>\n",
-       "      <td>0.600728</td>\n",
-       "      <td>-0.315509</td>\n",
-       "      <td>0.953749</td>\n",
+       "      <td>-2.629474</td>\n",
+       "      <td>-2.204306</td>\n",
+       "      <td>-1.266065</td>\n",
+       "      <td>-0.775194</td>\n",
+       "      <td>0.655324</td>\n",
+       "      <td>-0.445063</td>\n",
+       "      <td>-0.339144</td>\n",
+       "      <td>0.995990</td>\n",
+       "      <td>1.364317</td>\n",
+       "      <td>-0.051217</td>\n",
+       "      <td>0.698142</td>\n",
+       "      <td>-2.045328</td>\n",
+       "      <td>0.981622</td>\n",
+       "      <td>0.721354</td>\n",
+       "      <td>-0.806443</td>\n",
+       "      <td>-1.070139</td>\n",
+       "      <td>-0.010199</td>\n",
+       "      <td>-0.295874</td>\n",
+       "      <td>0.431327</td>\n",
+       "      <td>-0.974846</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4408,25 +4408,25 @@
       ],
       "text/plain": [
        "         0         1         2         3         4         5         6   \\\n",
-       "0 -2.349394 -1.964698 -1.303966 -0.987680 -0.554604 -1.617399 -0.738669   \n",
-       "1 -2.714640 -2.531594 -1.822463 -0.914283 -0.625165 -0.045687 -0.223977   \n",
-       "2 -2.558816 -2.615596 -1.880682 -0.896443 -0.347520  0.372640 -1.888250   \n",
-       "3 -2.559979 -2.504797 -1.847890 -0.882382 -1.210079  0.159983  0.285513   \n",
-       "4 -2.358885 -2.338624 -1.815631 -0.968781  0.017734 -0.417007 -0.483347   \n",
+       "0 -2.769029 -2.518959 -1.739020 -0.330233  0.237763 -1.013230 -0.089534   \n",
+       "1 -2.533044 -2.459387 -1.402981 -0.189078  1.777424 -0.484972  0.424470   \n",
+       "2 -2.437271 -2.245965 -2.082603 -1.039240 -1.494441  1.196309  0.052683   \n",
+       "3 -2.047033 -1.835530 -1.363936 -0.727224 -0.476695  0.414835  0.073855   \n",
+       "4 -2.629474 -2.204306 -1.266065 -0.775194  0.655324 -0.445063 -0.339144   \n",
        "\n",
        "         7         8         9         10        11        12        13  \\\n",
-       "0  2.124230  0.315575  0.183741 -0.802564 -0.083918 -0.914289 -0.685622   \n",
-       "1  0.159129  0.714605 -0.559149  0.223976 -0.232830 -0.120726 -0.993069   \n",
-       "2  1.019234  1.692147 -1.248787  1.024169 -1.782918  1.249223 -0.185768   \n",
-       "3  0.088075  0.139307 -0.324613  0.032903 -0.891223  0.306960 -0.759363   \n",
-       "4 -0.210421 -1.184965  0.206227  0.028060  0.346867 -0.629823  0.289710   \n",
+       "0 -0.388454 -1.157052  0.350126 -0.336157  0.815053 -0.006685 -1.424460   \n",
+       "1 -1.452067  0.814003  0.627453  0.365911  0.267878  0.417426 -1.475091   \n",
+       "2  1.143150 -1.010374  0.957794 -0.079618  0.256957  0.577960  2.396974   \n",
+       "3  1.426553  0.031166  0.434781  2.238489 -0.594066  1.047646  1.453106   \n",
+       "4  0.995990  1.364317 -0.051217  0.698142 -2.045328  0.981622  0.721354   \n",
        "\n",
        "         14        15        16        17        18        19  \n",
-       "0 -0.023878  1.248657 -0.863789  0.264279  1.926349 -0.270734  \n",
-       "1  0.021892  0.026256 -0.050733 -0.533418 -0.073019 -0.655557  \n",
-       "2 -0.708649  0.244224  1.824514  0.891206 -0.277401  0.132153  \n",
-       "3  0.167718 -0.142139 -0.160595 -0.551755 -0.169424  0.215321  \n",
-       "4 -1.046042 -0.246809 -0.659602  0.600728 -0.315509  0.953749  "
+       "0 -0.503386 -1.083073 -1.334109 -0.147658  0.591205  0.542109  \n",
+       "1 -0.786401 -0.516684 -0.684176  0.382051  0.220170 -0.008383  \n",
+       "2 -0.354165 -1.458098 -0.357285  2.010671  0.207631 -0.204656  \n",
+       "3  0.789411  0.661492 -0.106658  0.854784  0.301788 -1.737809  \n",
+       "4 -0.806443 -1.070139 -0.010199 -0.295874  0.431327 -0.974846  "
       ]
      },
      "execution_count": 25,
@@ -4645,7 +4645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4658,16 +4658,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5760326833881377"
+       "0.5505616912314409"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
