--- a/Playground_May/May.ipynb
+++ b/Playground_May/May.ipynb
@@ -1073,7 +1073,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Try with 2 PC\n",
+    "# Try with 2 PCs\n",
     "pca = PCA(n_components=2)\n",
     "pca.fit(Xtr)\n",
     "Xtr_pca1 = pca.transform(Xtr_1)\n",
@@ -1120,7 +1120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Try with 3 PC\n",
+    "# Try with 3 PCs\n",
     "pca = PCA(n_components=3)\n",
     "pca.fit(Xtr)\n",
     "Xtr_pca1 = pca.transform(Xtr_1)\n",
@@ -1176,6 +1176,19 @@
     "\n",
     "plt.legend() \n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We will use 4 PCs\n",
+    "pca = PCA(n_components=4)\n",
+    "pca.fit(Xtr)\n",
+    "Xtr_pca1 = pca.transform(Xtr_1)\n",
+    "Xtr_pca0 = pca.transform(Xtr_0)"
    ]
   },
   {
