--- a/Playground_May/May.ipynb
+++ b/Playground_May/May.ipynb
@@ -2452,7 +2452,15 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation AUC:0.991\n"
+     ]
+    }
+   ],
    "source": [
     "import shap\n",
     "import xgboost as xgb\n",
@@ -2471,18 +2479,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Apply to the Testing dataset"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Predict\n",
+    "Yte_pred = lgbm_model.predict_proba(Xte.values)[:,1]\n",
+    "\n",
+    "# Convert to pandas Series\n",
+    "Yte_pred = pd.Series(Yte_pred)\n",
+    "\n",
+    "# Add 'id'\n",
+    "Yte_pred = pd.concat([test_id, Yte_pred], axis=1)\n",
+    "Yte_pred = Yte_pred.rename(columns={0: \"target\"})\n",
+    "\n",
+    "# Create csv file\n",
+    "submit_may = Yte_pred.to_csv('submission.csv', index=False) # score : "
+   ]
   },
   {
    "cell_type": "markdown",
