--- a/Playground_May/May.ipynb
+++ b/Playground_May/May.ipynb
@@ -799,81 +799,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AAA: count 47875 , mean 0.548\n",
-      "AAB: count 53713 , mean 0.571\n",
-      "ABA: count 119268 , mean 0.491\n",
-      "ABB: count 81438 , mean 0.573\n",
-      "BAA: count 58033 , mean 0.462\n",
-      "BAB: count 40138 , mean 0.567\n",
-      "BBA: count 96181 , mean 0.403\n",
-      "BBB: count 106354 , mean 0.404\n"
-     ]
-    }
-   ],
-   "source": [
-    "# f27_AB = split_f27.loc[:, ['f_27_01', 'f_27_03', 'f_27_06']]\n",
-    "# f27_AB = pd.concat([f27_AB, Ytr], axis=1)\n",
-    "\n",
-    "# # Make subsets\n",
-    "# AAA = f27_AB.loc[(f27_AB['f_27_01']=='A') & (f27_AB['f_27_03']=='A') & (f27_AB['f_27_06']=='A'), :]\n",
-    "# AAB = f27_AB.loc[(f27_AB['f_27_01']=='A') & (f27_AB['f_27_03']=='A') & (f27_AB['f_27_06']=='B'), :]\n",
-    "# ABA = f27_AB.loc[(f27_AB['f_27_01']=='A') & (f27_AB['f_27_03']=='B') & (f27_AB['f_27_06']=='A'), :]\n",
-    "# ABB = f27_AB.loc[(f27_AB['f_27_01']=='A') & (f27_AB['f_27_03']=='B') & (f27_AB['f_27_06']=='B'), :]\n",
-    "# BAA = f27_AB.loc[(f27_AB['f_27_01']=='B') & (f27_AB['f_27_03']=='A') & (f27_AB['f_27_06']=='A'), :]\n",
-    "# BAB = f27_AB.loc[(f27_AB['f_27_01']=='B') & (f27_AB['f_27_03']=='A') & (f27_AB['f_27_06']=='B'), :]\n",
-    "# BBA = f27_AB.loc[(f27_AB['f_27_01']=='B') & (f27_AB['f_27_03']=='B') & (f27_AB['f_27_06']=='A'), :]\n",
-    "# BBB = f27_AB.loc[(f27_AB['f_27_01']=='B') & (f27_AB['f_27_03']=='B') & (f27_AB['f_27_06']=='B'), :]\n",
-    "\n",
-    "# # Check relations\n",
-    "# print(\"AAA: count\", AAA.shape[0], \", mean\", round(AAA['target'].mean(), 3))\n",
-    "# print(\"AAB: count\", AAB.shape[0], \", mean\", round(AAB['target'].mean(), 3))\n",
-    "# print(\"ABA: count\", ABA.shape[0], \", mean\", round(ABA['target'].mean(), 3))\n",
-    "# print(\"ABB: count\", ABB.shape[0], \", mean\", round(ABB['target'].mean(), 3))\n",
-    "# print(\"BAA: count\", BAA.shape[0], \", mean\", round(BAA['target'].mean(), 3))\n",
-    "# print(\"BAB: count\", BAB.shape[0], \", mean\", round(BAB['target'].mean(), 3))\n",
-    "# print(\"BBA: count\", BBA.shape[0], \", mean\", round(BBA['target'].mean(), 3))\n",
-    "# print(\"BBB: count\", BBB.shape[0], \", mean\", round(BBB['target'].mean(), 3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A1B2: count 217757 , mean 0.496\n",
-      "A2B1: count 254419 , mean 0.534\n",
-      "A3: count 47875 , mean 0.548\n",
-      "B3: count 106354 , mean 0.404\n"
-     ]
-    }
-   ],
-   "source": [
-    "# # How about total number of A and B?\n",
-    "# A1B2 = pd.concat([ABB, BAB, BBA])\n",
-    "# A2B1 = pd.concat([AAB, ABA, ABB])\n",
-    "# A3 = AAA\n",
-    "# B3 = BBB\n",
-    "\n",
-    "# # Check relations\n",
-    "# print(\"A1B2: count\", A1B2.shape[0], \", mean\", round(A1B2['target'].mean(), 3))\n",
-    "# print(\"A2B1: count\", A2B1.shape[0], \", mean\", round(A2B1['target'].mean(), 3))\n",
-    "# print(\"A3: count\", A3.shape[0], \", mean\", round(A3['target'].mean(), 3))\n",
-    "# print(\"B3: count\", B3.shape[0], \", mean\", round(B3['target'].mean(), 3))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
@@ -2189,7 +2114,15 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation AUC:0.991\n"
+     ]
+    }
+   ],
    "source": [
     "# Fit\n",
     "lgbm_model =LGBMClassifier(n_estimators=5000, min_child_samples=80, random_state=1307)\n",
@@ -2200,7 +2133,7 @@
     "\n",
     "# Compute score\n",
     "score = roc_auc_score(Yva, Yva_pred)\n",
-    "print(f\"Validation AUC:{(score):.3f}\")      # 0.991"
+    "print(f\"Validation AUC:{(score):.3f}\")      # 0.991(w/o As, Bs), 0.991(w/ As, Bs)"
    ]
   },
   {
@@ -2212,7 +2145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2227,7 +2160,7 @@
     "Yte_pred = Yte_pred.rename(columns={0: \"target\"})\n",
     "\n",
     "# Create csv file\n",
-    "submit_may = Yte_pred.to_csv('submission2.csv', index=False) # score : 0.99039"
+    "submit_may = Yte_pred.to_csv('submission2.csv', index=False) # pv score: 0.99039(w/o As, Bs), 0.99036(w/ As, Bs)"
    ]
   },
   {
