--- a/Playground_May/May.ipynb
+++ b/Playground_May/May.ipynb
@@ -235,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our investigation will be based on **Training** data only"
+    "Our investigation will be based on **Training** data only. We should treat the **Validating** data as unknown testing data."
    ]
   },
   {
@@ -431,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Comments**: We cannot be certain that these string values are all the possible values. There might be a new combination of letter in validating/testing dataset. We should split each alphabet."
+    "**Comments**: We cannot be certain that these strings are all the possible combinations of alphabets. There might be a new combination in validating/testing dataset. Therefore we should split the alphabets and treat them individually."
    ]
   },
   {
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,12 +817,12 @@
     "        if c[i] == 'B':\n",
     "            if (i == 0) | (i== 2) | (i==5):\n",
     "                n += 1\n",
-    "    return n\n"
+    "    return n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
        "Text(0.5, 1.0, 'Change of mean according to the number of alphabets in binary position')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1307,7 @@
        "4        0        1       13        5        1         5       2       1  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1336,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1677,7 @@
        "4        0        2       16        0        2         5       3       0  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1714,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2055,7 +2055,7 @@
        "4        1        3        0        1        5         5       1       2  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2085,7 +2085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2094,7 +2094,7 @@
        "((603000, 43), (297000, 43), (700000, 43))"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2108,6 +2108,13 @@
    "metadata": {},
    "source": [
     "## 4. Model Application"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will use **LightGBM Classifier** model. It's a gradient boosting framework developed by Microsoft which is faster than **XGBoost**. More details can be found on https://www.kaggle.com/code/prashant111/lightgbm-classifier-in-python (issued by ***@PRASHANT BANERJEE***)"
    ]
   },
   {
