--- a/Playground_May/May.ipynb
+++ b/Playground_May/May.ipynb
@@ -2118,29 +2118,179 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, let's find the optimal `n_estimators` and `min_child_samples`. `n_estimators` is the number of boosted trees to fit. Simply you can think this as the number of boosting iterations performed. `min_child_samples` is the minimum number of data needed in a child. Child means a leaf here."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### - Find the best parameters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation AUC:0.991\n"
+      "Score with 100 estimators and 6000 min child samples: 0.9503\n",
+      "Score with 100 estimators and 1000 min child samples: 0.9543\n",
+      "Score with 100 estimators and 500 min child samples: 0.9542\n",
+      "Score with 100 estimators and 100 min child samples: 0.9551\n",
+      "Score with 100 estimators and 50 min child samples: 0.956\n",
+      "Score with 100 estimators and 20 min child samples: 0.9558\n",
+      "Score with 1000 estimators and 6000 min child samples: 0.9816\n",
+      "Score with 1000 estimators and 1000 min child samples: 0.9843\n",
+      "Score with 1000 estimators and 500 min child samples: 0.9851\n",
+      "Score with 1000 estimators and 100 min child samples: 0.9859\n",
+      "Score with 1000 estimators and 50 min child samples: 0.9859\n",
+      "Score with 1000 estimators and 20 min child samples: 0.9862\n",
+      "Score with 2000 estimators and 6000 min child samples: 0.9847\n",
+      "Score with 2000 estimators and 1000 min child samples: 0.9875\n",
+      "Score with 2000 estimators and 500 min child samples: 0.988\n",
+      "Score with 2000 estimators and 100 min child samples: 0.9888\n",
+      "Score with 2000 estimators and 50 min child samples: 0.9888\n",
+      "Score with 2000 estimators and 20 min child samples: 0.9888\n",
+      "Score with 3000 estimators and 6000 min child samples: 0.9858\n",
+      "Score with 3000 estimators and 1000 min child samples: 0.9885\n",
+      "Score with 3000 estimators and 500 min child samples: 0.989\n",
+      "Score with 3000 estimators and 100 min child samples: 0.9898\n",
+      "Score with 3000 estimators and 50 min child samples: 0.9899\n",
+      "Score with 3000 estimators and 20 min child samples: 0.9899\n",
+      "Score with 4000 estimators and 6000 min child samples: 0.9862\n",
+      "Score with 4000 estimators and 1000 min child samples: 0.9889\n",
+      "Score with 4000 estimators and 500 min child samples: 0.9895\n",
+      "Score with 4000 estimators and 100 min child samples: 0.9904\n",
+      "Score with 4000 estimators and 50 min child samples: 0.9903\n",
+      "Score with 4000 estimators and 20 min child samples: 0.9905\n",
+      "Score with 5000 estimators and 6000 min child samples: 0.9866\n",
+      "Score with 5000 estimators and 1000 min child samples: 0.9891\n",
+      "Score with 5000 estimators and 500 min child samples: 0.9897\n",
+      "Score with 5000 estimators and 100 min child samples: 0.9906\n",
+      "Score with 5000 estimators and 50 min child samples: 0.9906\n",
+      "Score with 5000 estimators and 20 min child samples: 0.9908\n",
+      "Score with 6000 estimators and 6000 min child samples: 0.9867\n",
+      "Score with 6000 estimators and 1000 min child samples: 0.9892\n",
+      "Score with 6000 estimators and 500 min child samples: 0.9899\n",
+      "Score with 6000 estimators and 100 min child samples: 0.9907\n",
+      "Score with 6000 estimators and 50 min child samples: 0.9908\n",
+      "Score with 6000 estimators and 20 min child samples: 0.9909\n"
      ]
     }
    ],
    "source": [
-    "# Fit\n",
-    "lgbm_model =LGBMClassifier(n_estimators=5000, min_child_samples=80, random_state=1307)\n",
+    "n_estimators_span = [100, 1000, 2000, 3000, 4000, 5000, 6000]\n",
+    "min_child_samples_span = [6000, 1000, 500, 100, 50, 20]     # Xtr.shape[0] * 0.01 = 6030\n",
+    "score_matrix = np.zeros((len(n_estimators_span), len(min_child_samples_span)))\n",
+    "\n",
+    "for i in range(len(n_estimators_span)):\n",
+    "    n_e = n_estimators_span[i]\n",
+    "    for j in range(len(min_child_samples_span)):\n",
+    "        m_c = min_child_samples_span[j]\n",
+    "\n",
+    "        # Fit\n",
+    "        lgbm_model =LGBMClassifier(n_estimators=n_e, min_child_samples=m_c, random_state=0)\n",
+    "        lgbm_model.fit(Xtr.values, Ytr)\n",
+    "\n",
+    "        # Predict\n",
+    "        Yva_pred = lgbm_model.predict_proba(Xva.values)[:,1]\n",
+    "\n",
+    "        # Store the score\n",
+    "        score = roc_auc_score(Yva, Yva_pred)\n",
+    "        print('Score with', n_e, 'estimators and', m_c, 'min child samples:', round(score, 4))\n",
+    "        score_matrix[i, j] = score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Best results from each number of estimators\n",
+    "Score with 100 estimators and 50 min child samples: 0.956 <br>\n",
+    "Score with 1000 estimators and 20 min child samples: 0.9862 <br>\n",
+    "Score with 2000 estimators and 50 min child samples: 0.9888 <br>\n",
+    "Score with 3000 estimators and 50 min child samples: 0.9899 <br>\n",
+    "Score with 4000 estimators and 20 min child samples: 0.9905 <br>\n",
+    "Score with 5000 estimators and 20 min child samples: 0.9908 <br>\n",
+    "Score with 6000 estimators and 20 min child samples: 0.9909"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6000, 1000, 500, 100, 50, 20]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min_child_samples_span"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal number of estimators: 6000\n",
+      "Optimal number of minimum child samples: 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "opt_n_e = n_estimators_span[np.argmax(score_matrix) // len(min_child_samples_span)]\n",
+    "opt_m_c = min_child_samples_span[np.argmax(score_matrix) % len(min_child_samples_span)]\n",
+    "print('Optimal number of estimators:', opt_n_e)   \n",
+    "print('Optimal number of minimum child samples:', opt_m_c)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LGBMClassifier(n_estimators=6000, random_state=0)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fit using the optimal parameters\n",
+    "# lgbm_model =LGBMClassifier(n_estimators=5000, min_child_samples=80, random_state=1307)\n",
+    "lgbm_model =LGBMClassifier(n_estimators=opt_n_e, min_child_samples=opt_m_c, random_state=0)\n",
     "lgbm_model.fit(Xtr.values, Ytr)\n",
     "\n",
-    "# Predict\n",
-    "Yva_pred = lgbm_model.predict_proba(Xva.values)[:,1]\n",
+    "# # Predict\n",
+    "# Yva_pred = lgbm_model.predict_proba(Xva.values)[:,1]\n",
     "\n",
-    "# Compute score\n",
-    "score = roc_auc_score(Yva, Yva_pred)\n",
-    "print(f\"Validation AUC:{(score):.3f}\")      # 0.991(w/o As, Bs), 0.991(w/ As, Bs)"
+    "# # Compute score\n",
+    "# score = roc_auc_score(Yva, Yva_pred)\n",
+    "# print(f\"Validation AUC:{(score):.3f}\")      # 0.991(w/o As, Bs), 0.991(w/ As, Bs)"
    ]
   },
   {
@@ -2152,7 +2302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2167,7 +2317,8 @@
     "Yte_pred = Yte_pred.rename(columns={0: \"target\"})\n",
     "\n",
     "# Create csv file\n",
-    "submit_may = Yte_pred.to_csv('submission2.csv', index=False) # pv score: 0.99039(w/o As, Bs), 0.99036(w/ As, Bs)"
+    "submit_may = Yte_pred.to_csv('submission3.csv', index=False) \n",
+    "# pv score: 0.99039(w/o As, Bs), 0.99036(w/ As, Bs)"
    ]
   },
   {
