--- a/Playground_May/May.ipynb
+++ b/Playground_May/May.ipynb
@@ -2302,7 +2302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2318,7 +2318,7 @@
     "\n",
     "# Create csv file\n",
     "submit_may = Yte_pred.to_csv('submission3.csv', index=False) \n",
-    "# pv score: 0.99039(w/o As, Bs), 0.99036(w/ As, Bs)"
+    "# pv score: 1. 0.99039(w/o As, Bs), 2. 0.99036(w/ As, Bs) 3. 0.99073"
    ]
   },
   {
