--- a/Playground_Jun/Jun.ipynb
+++ b/Playground_Jun/Jun.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
        "(1000000, 81)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,13 +80,12 @@
    "source": [
     "# Load dataset\n",
     "data = pd.read_csv('data.csv')\n",
-    "\n",
     "data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -197,8 +196,155 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['F_1_0',\n",
+       " 'F_1_1',\n",
+       " 'F_1_2',\n",
+       " 'F_1_3',\n",
+       " 'F_1_4',\n",
+       " 'F_1_5',\n",
+       " 'F_1_6',\n",
+       " 'F_1_7',\n",
+       " 'F_1_8',\n",
+       " 'F_1_9',\n",
+       " 'F_1_10',\n",
+       " 'F_1_11',\n",
+       " 'F_1_12',\n",
+       " 'F_1_13',\n",
+       " 'F_1_14',\n",
+       " 'F_2_0',\n",
+       " 'F_2_1',\n",
+       " 'F_2_2',\n",
+       " 'F_2_3',\n",
+       " 'F_2_4',\n",
+       " 'F_2_5',\n",
+       " 'F_2_6',\n",
+       " 'F_2_7',\n",
+       " 'F_2_8',\n",
+       " 'F_2_9',\n",
+       " 'F_2_10',\n",
+       " 'F_2_11',\n",
+       " 'F_2_12',\n",
+       " 'F_2_13',\n",
+       " 'F_2_14',\n",
+       " 'F_2_15',\n",
+       " 'F_2_16',\n",
+       " 'F_2_17',\n",
+       " 'F_2_18',\n",
+       " 'F_2_19',\n",
+       " 'F_2_20',\n",
+       " 'F_2_21',\n",
+       " 'F_2_22',\n",
+       " 'F_2_23',\n",
+       " 'F_2_24',\n",
+       " 'F_3_0',\n",
+       " 'F_3_1',\n",
+       " 'F_3_2',\n",
+       " 'F_3_3',\n",
+       " 'F_3_4',\n",
+       " 'F_3_5',\n",
+       " 'F_3_6',\n",
+       " 'F_3_7',\n",
+       " 'F_3_8',\n",
+       " 'F_3_9',\n",
+       " 'F_3_10',\n",
+       " 'F_3_11',\n",
+       " 'F_3_12',\n",
+       " 'F_3_13',\n",
+       " 'F_3_14',\n",
+       " 'F_3_15',\n",
+       " 'F_3_16',\n",
+       " 'F_3_17',\n",
+       " 'F_3_18',\n",
+       " 'F_3_19',\n",
+       " 'F_3_20',\n",
+       " 'F_3_21',\n",
+       " 'F_3_22',\n",
+       " 'F_3_23',\n",
+       " 'F_3_24',\n",
+       " 'F_4_0',\n",
+       " 'F_4_1',\n",
+       " 'F_4_2',\n",
+       " 'F_4_3',\n",
+       " 'F_4_4',\n",
+       " 'F_4_5',\n",
+       " 'F_4_6',\n",
+       " 'F_4_7',\n",
+       " 'F_4_8',\n",
+       " 'F_4_9',\n",
+       " 'F_4_10',\n",
+       " 'F_4_11',\n",
+       " 'F_4_12',\n",
+       " 'F_4_13',\n",
+       " 'F_4_14']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# List of features\n",
+    "features = data.columns.drop('row_id').tolist()\n",
+    "features"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## 2. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Binomial x Random one 0 per row\n",
+    "def random_mask(n, k):\n",
+    "    mask = np.ones((n, k))\n",
+    "\n",
+    "    # Set one random per row at 0\n",
+    "    mask[(np.arange(n), np.random.randint(0, k, n))] = 0\n",
+    "    \n",
+    "    # Add binomial probability as well\n",
+    "    b_mask = np.random.binomial(1, 0.5, (n, k))    # 1 trial, p=0.5\n",
+    "    return mask * b_mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mask_n_rows(n, k, n_missing):\n",
+    "    # n_missing number of indices of columns with small values\n",
+    "    idx = np.random.rand(n, k).argsort(1)[:, :n_missing]\n",
+    "\n",
+    "    col_idx = idx.flatten()\n",
+    "    row_idx = np.arange(n).repeat(n_missing)\n",
+    "    \n",
+    "    mask = np.ones((n, k))\n",
+    "    mask[(row_idx, col_idx)] = 0\n",
+    "    return mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -218,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7 (default, Sep 16 2021, 08:50:36) \n[Clang 10.0.0 ]"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
